<package>
  <name>irb120_gazebo</name>
  <version>0.1.0</version>
  <description>irb120_gazebo</description>
  <maintainer email="skasturirangan@wpi.edu">Sathya Narayanan K</maintainer>

  <license>BSD</license>

  <author email="skasturirangan@wpi.edu">Sathya Narayanan K</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>irb120_control</run_depend>
  <run_depend>irb120_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
